fix log bug + add steps counter + move iteration by 1

--- a/src/style.scss
+++ b/src/style.scss
@@ -115,3 +115,11 @@ input {
         transform: rotate(45deg);
     }
 }
+
+#steps {
+    opacity: 0.5;
+    position: fixed;
+    top: 15px;
+    right: 17px;
+    font-size: 15px;
+}
