--- a/src/style.scss
+++ b/src/style.scss
@@ -26,11 +26,29 @@ input {
     }
 }
 
+button {
+    background-color: #333;
+    color: #f8f8f8;
+    padding: 11px 15px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+
+    &:hover {
+        background-color: #444;
+    }
+}
+
 .body {
     display: flex;
     flex-direction: column;
     height: 100%;
     align-items: center;
+}
+
+#error {
+    color: salmon;
+    text-align: center;
 }
 
 .container {
